force-app/main/default/objects/Campaign_Location__c/Campaign_Location__c.object-meta.xml
<CustomObject>
    <label>Campaign Location</label>
    <nameField>
        <label>Campaign Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>