force-app/main/default/objects/Campaign_Location__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Location_Capaigns</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>